--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        //mama duck's revenge text
         <EditText
             android:id="@+id/editTextTextPersonName"
             android:layout_width="412dp"
