--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Page 2"
+        android:text="Activity 2"
         android:textSize="50sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
