--- a/app/src/main/res/layout/activity_game_mode.xml
+++ b/app/src/main/res/layout/activity_game_mode.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/vector_nature_scene_with_hiking_track_in_the_forest"
+        android:src="@drawable/forest"
         android:scaleType="centerCrop"/>
 
     <TextView
