--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -6,14 +6,26 @@
     android:background="@drawable/forest"
     android:gravity="center"
     android:padding="10dp">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/restart"
+            android:onClick="restart"
+            android:contentDescription="Restart"/>
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/exit"
+            android:onClick="exit"
+            android:contentDescription="Exit"/>
 
     </LinearLayout>
     <View
@@ -24,33 +36,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center" >
-
-        <ImageButton
-            android:layout_width="89dp"
-            android:layout_height="90dp"
-            android:background="@drawable/restart"
-            android:contentDescription="Restart"
-            android:onCLick="restart" />
-
-        <ImageButton
-            android:layout_width="154dp"
-            android:layout_height="119dp"
-            android:layout_weight="1"
-            android:background="@drawable/exit"
-            android:contentDescription="Exit"
-            android:onClick="exit"
-            android:scaleType="center" />
-    </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:includeFontPadding="true"
                 android:text="Points: "
                 android:textColor="@android:color/white"
-                android:textSize="30sp" />
+                android:textSize="30sp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,24 +54,32 @@
                 android:layout_weight="1"
                 android:textColor="@android:color/white"
                 android:textSize="60sp"
-                android:text="'60"/>
-    <LinearLayout
+                android:text="60"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical" >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Personal Best: "
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvPersonalBest"
+                android:layout_weight="1"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:text="30" />
+        </LinearLayout>
+    </LinearLayout>
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Personal best: "
-            android:textColor="@android:color/white"
-            android:textSize="30sp" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tvPersonalBest"
-            android:layout_weight="1"
-            android:textColor="@android:color/white" />
-
-
+        />
 </LinearLayout>
